Renamed Color to KubeColor, added kjs$ prefix to methods, changed some String arguments for model builders to ResourceLocations