@@ -3,7 +3,6 @@ package dev.latvian.mods.kubejs.bindings;
 import net.minecraft.core.Direction;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -21,5 +20,6 @@ public interface DirectionWrapper {
 	Direction SOUTH = Direction.SOUTH;
 	Direction WEST = Direction.WEST;
 	Direction EAST = Direction.EAST;
-	Map<String, Direction> ALL = Collections.unmodifiableMap(Arrays.stream(Direction.values()).collect(Collectors.toMap(Direction::getSerializedName, Function.identity())));
+	Direction[] VALUES = Direction.values();
+	Map<String, Direction> ALL = Map.copyOf(Arrays.stream(VALUES).collect(Collectors.toMap(Direction::getSerializedName, Function.identity())));
 }
